# trendzap-zypherpunk

./: .env.example  .env.template  .gitignore  README.md
scripts/: fund-testnet-wallets.sh  setup-environment.sh  verify-hour1.sh
smart-contracts/: .gitignore  README.md
smart-contracts/arbitrum/: hardhat.config.ts  package-lock.json  package.json
smart-contracts/orchestrator/: package-lock.json  package.json
smart-contracts/shared/: constants.ts  types.ts
smart-contracts/solana/: Anchor.toml  package-lock.json  package.json
smart-contracts/solana/programs/trendzap-bet/: Cargo.toml
trendzap_platform/components/: cross-chain-bet-dialog.tsx
trendzap_platform/components/providers/: privy-provider.tsx
